# RALFit

./: .gitignore  .readthedocs.yaml  .travis.yml  LICENCE  README.md  analyse_iterations.py  anvil_tests.sh  codecov.yaml  generate_control_file.py  iteration_tests.py  makebuild.sh  makebuild_fortran.sh  makebuild_shared.sh  makecov.sh  plot_convergence.py  run_single_test.sh  run_tests.sh  single_test_plots.py  single_test_plots.sh  write_standard_control_files.sh
ComparisonTools/: README.md  iteration_tests.py  parameter_choices.py  single_test_plots.py  write_standard_control_files.sh
control_files/: BaseReg  DEF  GN-N-H_s4  GN-Q-H_s4  GN_DTRS_app  GN_S  GN_gltr  GaussNewton  H_1E3_3  H_1E4_2  H_1E5_2  Hybrid  NT_p2_explicit  NT_p2_implicit  NT_p3_explicit  NT_p3_implicit  Newton  NewtonTen  NewtonTen2  TESTSPEC  gsl
cutest/: README.cutest
doc/: diary  plan
libRALFit/: CMakeLists.txt  README  README.md  pyproject.toml.in  setup.py  setup.py.in
libRALFit/cmake/modules/: CodeCoverage.cmake  FindMKL.cmake
libRALFit/doc/: Makefile  Readme.md  conf.py  errors.tex  eval_hf.tex  eval_j.tex  eval_r.tex  example_text.tex  index.rst  info_type.tex  install.rst  method.tex  nlls_c.tex  nlls_fortran.tex  nlls_header.tex  options_type.tex  requirements.txt  spec.cls  summary.tex
libRALFit/doc/C/: .readthedocs.yaml  conf.py  examples.rst  howtouse.rst  index.rst  macros.rst
libRALFit/doc/Fortran/: .readthedocs.yaml  Makefile  conf.py  examples.rst  howtouse.rst  index.rst  install.rst  macros.rst  method.rst  summary.rst
libRALFit/doc/Python/: .readthedocs.yaml  conf.py  examples.rst  howtouse.rst  index.rst  install.rst  macros.rst  ral_nlls.rst
libRALFit/doc/common/: RALFit_header.sty  derivative_chk.rst  errors.rst  example1.rst  inform.rst  install.rst  method.rst  nlls_solve.rst  options.rst  options_inner_method.txt  options_linesearch_type.txt  options_model.txt  options_nlls_method.txt  options_print_level.txt  options_regularization.txt  options_save_covm.txt  options_scale.txt  options_tr_update_strategy.txt  options_type_of_method.txt  subroutines.rst  summary.rst
libRALFit/example/C/: CMakeLists.txt  expfit.c  lm_example.c  nlls_example.c  nlls_example2.c  nlls_example_box.c  nlls_example_chk.c  nlls_example_fd.c  tracks.c
libRALFit/example/Fortran/: CMakeLists.txt  Lanczos.F90  Lanczos.f90  LanczosBox.F90  LanczosBox.f90  LanczosFD.F90  LanczosFD.f90  LanczosFD2.F90  LanczosFD2.f90  jacobian.F90  jacobian.f90  nlls_example.F90  nlls_example.f90  nlls_example2.F90  nlls_example2.f90  stp_x0sol.F90  stp_x0sol.f90
libRALFit/example/Python/: CMakeLists.txt  solve.py  solve_box.py  solve_weights.py
libRALFit/include/: ral_nlls.h
libRALFit/lapack/: CMakeLists.txt  la_constants.f90
libRALFit/src/: CMakeLists.txt  nag_export_mod.F90  nag_export_mod.f90  preprocessor.FPP  ral_nlls.F90  ral_nlls_bounds.F90  ral_nlls_bounds.f90  ral_nlls_ciface.F90  ral_nlls_ciface.f90  ral_nlls_double.f90  ral_nlls_dtrs.F90  ral_nlls_dtrs_double.f90  ral_nlls_fd.F90  ral_nlls_fd.f90  ral_nlls_internal.F90  ral_nlls_internal.f90  ral_nlls_linear.F90  ral_nlls_printing.F90  ral_nlls_printing.f90  ral_nlls_pyiface.c  ral_nlls_symbols.F90  ral_nlls_types.F90  ral_nlls_workspaces.F90  ral_nlls_workspaces.f90
libRALFit/test/: CMakeLists.txt  cdriver.c  example_module.f90  nlls_c_test.c  nlls_c_test.output  nlls_fortran_example.output  nlls_fortran_example2.output  nlls_python_test  nlls_test.F90  nlls_test.f90  pre-commit.sh  rat43.output  run_tests.sh  solve_python.output  unit_test_mod.F90
libRALFit/test/comparison_tests/: generate_control_file.py  iteration_tests.py
libRALFit/test/comparison_tests/control_files/: GN-Q-H  GaussNewton  H_1E1_2  H_1Ep2_2  Newton  NoSecDeriv  RAL_NLLS.SPC  TESTSPEC  gsl
libRALFit/test/comparison_tests/cutest/sif/: ARGAUSS.SIF  BROYDN3D.SIF  CERI651A.SIF  DIAMON2D.SIF  DMN15102.SIF  GAUSS1LS.SIF  GAUSS3.SIF  GSL.SPC  INTEQNELS.SIF  MGH.txt  MISRA1DLS.SIF  NELSON.SIF  OSBORNEA.SIF  POWELLSG.SIF  RAT42LS.SIF  RAT43LS.SIF  VESUVIA.SIF  VESUVIOU.SIF  names_minus_boxbod.txt  names_nist_first.txt
libRALFit/test/comparison_tests/cutest/src/ral_nlls/: ral_nlls_main.f90  ral_nlls_test.f90
libRALFit/tools/: nlls_options_type.txt  optlist.awk
libral_nlls/: CMakeLists.txt  setup.py  test.py
libral_nlls/cmake/modules/: CodeCoverage.cmake
libral_nlls/doc/: conf.py  errors.tex  eval_hf.tex  eval_j.tex  eval_r.tex  example_text.tex  index.rst  info_type.tex  method.tex  nlls_c.tex  nlls_fortran.tex  nlls_header.tex  options_type.tex  ral_nlls.rst  ral_nlls.tex  spec.cls  summary.tex
libral_nlls/example/: CMakeLists.txt  expfit.c
libral_nlls/example/C/: CMakeLists.txt  nlls_example.c  nlls_example2.c
libral_nlls/example/Fortran/: CMakeLists.txt  nlls_example.f90  nlls_example2.f90
libral_nlls/example/Python/: solve.py
libral_nlls/include/: ral_nlls.h
libral_nlls/src/: expfit.c  nlls_module.f90  ral_nlls.tex  ral_nlls_ciface.f90  ral_nlls_double.f90  ral_nlls_dtrs_double.f90  ral_nlls_internal.f90  ral_nlls_pyiface.c  ral_nlls_symbols.f90  ral_nlls_workspaces.f90  run_cutest.f90  single_test_plots.sh
libral_nlls/test/: CMakeLists.txt  cdriver.c  example_module.f90  nlls_c_example.output  nlls_c_test.c  nlls_c_test.output  nlls_fortran_example.output  nlls_fortran_example2.output  nlls_test.f90  pre-commit.sh  rat43.output  run_tests.sh  test.output
libral_nlls/test/comparison_tests/: analyse_data.py  generate_control_file.py  iteration_tests.py  parameter_choices.py  single_test_plots.py
libral_nlls/test/comparison_tests/control_files/: GN-N-H  GN-N-H_s  GN-N-H_s2  GN-N-H_s3  GN-N-H_s4  GN-Q-H_s  GN-Q-H_s2  GN-Q-H_s2up  GN-Q-H_s3  GN_DTRS  GN_DTRS_app  GN_DTRS_ex  GN_MS  GN_gltr  GaussNewton  H_1E0_2  H_1E4_1  H_1E4_3  Newton  QuasiNewton
libral_nlls/test/comparison_tests/cutest/sif/: BARDNE.SIF  BROYDNBD.SIF  CERI651B.SIF  DIAMON3D.SIF  DMN15103.SIF  DMN37142.SIF  DMN37142LS.SIF  DMN37143.SIF  ELFUN.f  GAUSS3LS.SIF  GROUP.f  ISIS.txt  MOREBVNE.SIF  OSBORNE2.SIF  OUTSDIF.d  RAL_NLLS.SPC  RANGE.f  WATSONNE.SIF
src/: Delta_tests.sh  (+30 more)
(+177 files in other folders)
